# subrust

./: Cargo.toml  LICENSE-MIT  NOTICE  README.md
self/: check.rs  check_b4.rs  check_io.rs  emit_delta.rs  emit_self.rs  generate_check.py  generate_lex.py  generate_parse.py  lex.rs  parse.rs
src/: apis.rs  ast.rs  check.rs  diag.rs  emit.rs  lex.rs  lib.rs  machine.rs  main.rs  parse.rs  platform.rs
subrust-boot/: .gitignore  REPLAY.md  SR-SEED.md  bootstrap-all.sh  verify.sh
subrust-boot/fasm/: README.md  build-fasm.sh  f_amd64.hex2  f_amd64.s  fref.rs  harness.py  verify-fasm.sh
subrust-boot/kaem/: build-sr0i.sh
subrust-boot/p1/: arith-core.P1pp  arith-ref.rs  arith128-core.P1pp  arith128-ref.rs  verify-128.sh  verify.sh
subrust-boot/sr0i/: sr0i.c
subrust-boot/sr0i-p1/: PORT-PLAN.md  eval-main.P1pp  eval.P1pp  lex-main.P1pp  lex-ref.rs  lex.P1pp  main.P1pp  parse-main.P1pp  parse-ref.rs  parse.P1pp  verify-lex.sh  verify-parse.sh  verify-sr0i.sh
subrust-boot/sr1i/: sr1i.rs  verify-b4.sh  verify-dialect.sh  verify-emit.sh  verify-io.sh  verify.sh
subrust-boot/sr1i/dialect/: addrof.rs  array.rs  array_trap.rs  bstr.rs  cast.rs  ref.rs  (+15 more)
tests/: boot_tests.rs  check_tests.rs  example.rs  fuzz_tests.rs  lex_tests.rs  parity_tests.rs  parse_tests.rs  run_tests.rs  selfhost_tests.rs
tests/common/: mod.rs
tests/data/: hvac.rs
tests/seed/: arith.out  arith.rs  bools.out  bools.rs  checksum.rs  echo.out  echo.rs  floats.rs  hello.out  hello.rs  loops.out  loops.rs  mem.rs  recurse.out  recurse.rs  trap_div0.rs  trap_oob.rs  trap_overflow.rs  trap_shift.rs
